update: tweetbutton ios like????

--- a/Marindeck/View/Base.lproj/Main.storyboard
+++ b/Marindeck/View/Base.lproj/Main.storyboard
@@ -35,19 +35,14 @@
                                     <constraint firstAttribute="height" constant="20" id="FSm-N5-a84"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cIw-Of-AaE">
-                                <rect key="frame" x="346" y="674" width="48" height="48"/>
-                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FVm-WB-8td" customClass="NDTweetBtn" customModule="Marindeck" customModuleProvider="target">
+                                <rect key="frame" x="338" y="742" width="56" height="56"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="1pq-DR-lEy"/>
-                                    <constraint firstAttribute="height" constant="48" id="4p4-A4-vau"/>
+                                    <constraint firstAttribute="width" constant="56" id="GaO-p7-0ju"/>
+                                    <constraint firstAttribute="height" constant="56" id="Pwp-6F-HvI"/>
                                 </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="ladybug" catalog="system"/>
-                                <connections>
-                                    <action selector="debugPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="ip9-Ie-vye"/>
-                                </connections>
-                            </button>
+                            </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I8j-5m-JKv">
                                 <rect key="frame" x="-280" y="0.0" width="280" height="896"/>
                                 <constraints>
@@ -57,40 +52,24 @@
                                     <segue destination="0su-yw-0yt" kind="embed" id="1y8-V1-kcp"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9v-pz-eSb">
-                                <rect key="frame" x="338" y="748" width="56" height="56"/>
-                                <color key="backgroundColor" systemColor="systemBlueColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="56" id="ghB-vR-bvv"/>
-                                    <constraint firstAttribute="height" constant="56" id="yYD-2c-rRF"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" backgroundImage="tweet"/>
-                                <connections>
-                                    <action selector="tweetPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="u9Y-cF-5OA"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cIw-Of-AaE" secondAttribute="bottom" constant="140" id="1Bh-2h-oJn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gy9-se-7fd" secondAttribute="trailing" id="1oG-DI-4gE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AjS-Cn-qwX" secondAttribute="trailing" id="6Vk-Kf-1qd"/>
                             <constraint firstItem="gy9-se-7fd" firstAttribute="top" secondItem="95p-Pr-vfx" secondAttribute="bottom" id="A3f-h5-eCF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FVm-WB-8td" secondAttribute="bottom" constant="64" id="DOY-3J-CJ5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FVm-WB-8td" secondAttribute="trailing" constant="20" id="JCZ-kv-g41"/>
                             <constraint firstItem="gy9-se-7fd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="K5R-eR-F8F"/>
-                            <constraint firstItem="V9v-pz-eSb" firstAttribute="top" secondItem="cIw-Of-AaE" secondAttribute="bottom" constant="26" id="Qht-93-4RN"/>
                             <constraint firstItem="I8j-5m-JKv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Sfd-0i-SwN"/>
                             <constraint firstItem="AjS-Cn-qwX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d09-0m-ogF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V9v-pz-eSb" secondAttribute="trailing" constant="20" id="eZA-4a-ruf"/>
                             <constraint firstItem="I8j-5m-JKv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="-280" id="fTj-H2-iip"/>
                             <constraint firstItem="95p-Pr-vfx" firstAttribute="leading" secondItem="I8j-5m-JKv" secondAttribute="trailing" id="iPh-n4-cSJ"/>
                             <constraint firstItem="95p-Pr-vfx" firstAttribute="top" secondItem="AjS-Cn-qwX" secondAttribute="bottom" id="jqd-f7-y9r"/>
                             <constraint firstAttribute="bottom" secondItem="I8j-5m-JKv" secondAttribute="bottom" id="p7n-Hl-FDI"/>
                             <constraint firstItem="AjS-Cn-qwX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="pTK-sD-kSY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cIw-Of-AaE" secondAttribute="trailing" constant="20" id="qEI-f1-3P3"/>
                             <constraint firstItem="95p-Pr-vfx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="rup-dO-SGd"/>
                             <constraint firstAttribute="bottom" secondItem="gy9-se-7fd" secondAttribute="bottom" id="sc8-GJ-wBI"/>
                         </constraints>
@@ -101,11 +80,10 @@
                     <connections>
                         <outlet property="bottomBackView" destination="gy9-se-7fd" id="EW1-H5-8LS"/>
                         <outlet property="bottomBackViewConstraint" destination="cyX-Ai-3cZ" id="BB3-hT-dY7"/>
-                        <outlet property="debugFloatingBtn" destination="cIw-Of-AaE" id="jQ7-4g-wXp"/>
                         <outlet property="mainDeckView" destination="95p-Pr-vfx" id="kCx-tU-0nc"/>
                         <outlet property="menuView" destination="I8j-5m-JKv" id="Stl-4X-r8c"/>
                         <outlet property="topBackView" destination="AjS-Cn-qwX" id="3t8-wt-fhD"/>
-                        <outlet property="tweetFloatingBtn" destination="V9v-pz-eSb" id="vWs-Pe-jvg"/>
+                        <outlet property="tweetFloatingBtn" destination="FVm-WB-8td" id="Ki8-vQ-Y7n"/>
                         <segue destination="Ve0-Md-qIV" kind="modal" identifier="toSettings" modalPresentationStyle="formSheet" id="mjj-rk-RJy"/>
                     </connections>
                 </viewController>
@@ -204,7 +182,6 @@
                                                     <rect key="frame" x="20" y="11" width="70" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -650,12 +627,10 @@
     <resources>
         <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
-        <image name="ladybug" catalog="system" width="128" height="128"/>
         <image name="logo2" width="2430" height="1080"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="rectangle.stack.fill" catalog="system" width="128" height="122"/>
-        <image name="tweet" width="1080" height="1080"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
@@ -669,9 +644,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
